--- a/app/src/main/res/layout-normal/listitem.xml
+++ b/app/src/main/res/layout-normal/listitem.xml
@@ -1,86 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="5dp">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:padding="7dp">
 
     <ImageView
+        android:id="@+id/iv"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/ap2"
-        android:id="@+id/iv"
         android:adjustViewBounds="true"
         android:maxHeight="100dp"
         android:maxWidth="50dp"
         android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="10dp"
-        android:paddingTop="5dp" />
+        android:paddingEnd="10dp"
+        android:paddingStart="5dp"
+        android:paddingTop="5dp"
+        app:srcCompat="@drawable/ap2"/>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/ll1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/top_left"
-                android:text="Essid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textSize="15sp"
-                android:lines="1"
                 android:layout_gravity="center_vertical"
-                android:maxLines="1"/>
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="Essid"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="17sp"/>
 
             <TextView
-                android:text="Manufacturer"
+                android:id="@+id/top_right"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:id="@+id/top_right"
-                android:gravity="right"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:maxLines="1"
-                android:textSize="10sp"/>
+                android:gravity="end|center_vertical"
+                android:maxLines="2"
+                android:text="Manufacturer"
+                android:textSize="13sp"/>
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/ll2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layoutDirection="rtl">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll1"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:id="@+id/bottom_right"
-                android:text="asdfsdfsdfsfsdfsdf"
-                android:layout_marginRight="5dp"
-                android:gravity="right"
-                android:maxLines="2"
-                android:layout_gravity="center_vertical"
-                android:textSize="10sp"/>
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
                 android:id="@+id/bottom_left"
-                android:textSize="10sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:maxLines="1"
                 android:text="00:11:22:33:44:55"
-                android:gravity="left"
-                android:maxLines="2"
-                android:layout_gravity="center_vertical" />
+                android:textSize="13sp"/>
 
+            <TextView
+                android:id="@+id/bottom_right"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="end|center_vertical"
+                android:maxLines="2"
+                android:text="dsadfasdfasdfas"
+                android:textSize="13sp"/>
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
