--- a/app/src/main/res/layout/activity_send_log.xml
+++ b/app/src/main/res/layout/activity_send_log.xml
@@ -37,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
+            android:labelFor="@+id/email_et"
             android:text="E-mail"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="18sp"/>
@@ -55,8 +56,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:text="@string/extra"
         android:hint="@string/optional"
+        android:labelFor="@+id/extra_et"
+        android:text="@string/extra"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="18sp"/>
 
