--- a/app/src/main/res/layout/export.xml
+++ b/app/src/main/res/layout/export.xml
@@ -3,6 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:focusable="true"
+              android:focusableInTouchMode="true"
               android:paddingTop="10dp">
 
     <TextView
