--- a/app/src/main/res/layout/restore_firmware.xml
+++ b/app/src/main/res/layout/restore_firmware.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:paddingTop="10dp">
 
     <ProgressBar
