Improve manufacturer database creation and loading, make AVLTree.add() return whether the object was added or not, remove UpdateRequest, fifo and refresh_thread (no longer needed), adapt everything to the new scheme (new Device class), code improvements and cleanup

--- a/app/src/main/res/layout-large/listitem.xml
+++ b/app/src/main/res/layout-large/listitem.xml
@@ -42,7 +42,7 @@
 
             <TextView
                 android:id="@+id/top_right"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
@@ -70,7 +70,7 @@
 
             <TextView
                 android:id="@+id/bottom_right"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
