--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -30,7 +30,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/top_left"
+                android:id="@+id/upperLeft"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -41,7 +41,7 @@
                 android:textSize="19sp"/>
 
             <TextView
-                android:id="@+id/top_right"
+                android:id="@+id/upperRight"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -60,7 +60,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/bottom_left"
+                android:id="@+id/lowerLeft"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -69,7 +69,7 @@
                 android:text="00:11:22:33:44:55"/>
 
             <TextView
-                android:id="@+id/bottom_right"
+                android:id="@+id/lowerRight"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
