--- a/app/src/main/res/layout/filters.xml
+++ b/app/src/main/res/layout/filters.xml
@@ -262,28 +262,18 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:labelFor="@+id/manuf_filter_et"
-            android:text="@string/manuf_filter"
-            android:textColor="?android:attr/textColorPrimary"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textSize="18sp"/>
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/manuf_filter_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:paddingStart="10dp"/>
-    </LinearLayout>
+            android:hint="@string/manuf_filter"
+            android:inputType="text"
+            android:maxLines="1"/>
+
+    </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
