--- a/app/src/main/res/layout/install_firmware.xml
+++ b/app/src/main/res/layout/install_firmware.xml
@@ -21,35 +21,59 @@
         android:progress="1"
         android:progressDrawable="@drawable/progress_horizontal_holo_blue_dark"/>
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:labelFor="@+id/firm_location"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:text="@string/firm_location_text"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"/>
+        android:orientation="horizontal">
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <EditText
+                android:id="@+id/firm_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/firm_location_text"
+                android:inputType="text"
+                android:text="@string/firm_location_default"
+                android:maxLines="1"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/firm_fe_btn"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="..."/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/firm_location"
-            android:layout_width="0dp"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="text"
-            android:paddingEnd="8dp"
-            android:paddingStart="8dp"
-            android:text="@string/firm_location_default"/>
+            android:layout_weight="1">
+
+            <EditText
+                android:id="@+id/util_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/util_location_text"
+                android:text="@string/util_location_default"
+                android:inputType="text"
+                android:maxLines="1"/>
+
+        </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/firm_fe_btn"
+            android:id="@+id/util_fe_btn"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,44 +85,7 @@
         android:id="@+id/backup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:checked="true"
         android:text="@string/create_backup"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:labelFor="@+id/util_location"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:text="@string/util_location_text"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/util_location"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="text"
-            android:paddingEnd="8dp"
-            android:paddingStart="8dp"
-            android:text="@string/util_location_default"/>
-
-        <Button
-            android:id="@+id/util_fe_btn"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="..."/>
-    </LinearLayout>
 
 </LinearLayout>
