--- a/app/src/main/res/layout/restore_firmware.xml
+++ b/app/src/main/res/layout/restore_firmware.xml
@@ -21,32 +21,26 @@
         android:progress="1"
         android:progressDrawable="@drawable/progress_horizontal_holo_blue_dark"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:labelFor="@+id/firm_location"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:text="@string/firm_location_text"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/firm_location"
-            android:layout_width="0dp"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="text"
-            android:paddingEnd="8dp"
-            android:paddingStart="8dp"
-            android:text="@string/firm_location_default"/>
+            android:layout_weight="1">
+
+            <EditText
+                android:id="@+id/firm_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/firm_location_text"
+                android:inputType="text"
+                android:text="@string/firm_location_default"
+                android:maxLines="1"/>
+
+        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/firm_fe_btn"
@@ -56,4 +50,5 @@
             android:layout_gravity="center_vertical"
             android:text="..."/>
     </LinearLayout>
+
 </LinearLayout>
