Make keyboard NOT appear automatically when FiltersDialog appears, use IME actions for EditTexts for better UX

--- a/app/src/main/res/layout/crack_fragment.xml
+++ b/app/src/main/res/layout/crack_fragment.xml
@@ -22,8 +22,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/path_to_cap"
+                android:imeOptions="actionNext"
                 android:inputType="text"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -52,7 +54,8 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/path_to_wordlist"
                 android:inputType="text"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </android.support.design.widget.TextInputLayout>
 
