--- a/app/src/main/res/layout/filters.xml
+++ b/app/src/main/res/layout/filters.xml
@@ -4,6 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:padding="10dp"
     android:id="@+id/filterll1">
 
@@ -271,8 +273,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/manuf_filter"
-            android:inputType="text"
-            android:maxLines="1"/>
+            android:imeOptions="actionDone"
+            android:inputType="text|textFilter"
+            android:maxLines="1"
+            android:singleLine="true"/>
 
     </android.support.design.widget.TextInputLayout>
 
