--- a/app/src/main/res/layout/reaver_fragment.xml
+++ b/app/src/main/res/layout/reaver_fragment.xml
@@ -23,8 +23,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/pin_delay"
+            android:imeOptions="actionNext"
             android:inputType="number"
             android:maxLines="1"
+            android:singleLine="true"
             android:text="1"/>
 
     </android.support.design.widget.TextInputLayout>
@@ -38,8 +40,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/locked_delay"
+            android:imeOptions="actionDone"
             android:inputType="number"
             android:maxLines="1"
+            android:singleLine="true"
             android:text="60"/>
 
     </android.support.design.widget.TextInputLayout>
